Fixed page break on years = 0; Added styling to amount data display

--- a/src/App.css
+++ b/src/App.css
@@ -154,11 +154,12 @@ input[type="number"]::-webkit-outer-spin-button {
 .data-overlay {
   display: inline-block;
   font-size: 20px;
+  border-radius: 0.5em;
   font-weight: 500;
   font-family: "Montserrat";
   letter-spacing: 0.26px;
   color: #354059;
-  background-color: rgba(170, 255, 199, 0.3);
+  background-color: rgba(170, 255, 199, 0.6);
 
   position: absolute;
   top: 15%;
